<resources>
    <string name="app_name">JsonTest</string>
    <string name="text_button_posts">Submit</string>
    <string name="text_button_comments">Submit</string>
    <string name="text_button_users">Submit</string>
    <string name="text_button_photos">Submit</string>
    <string name="text_button_todos">Submit</string>
    <string name="hint_comments_editText">Enter comment id</string>
    <string name="hint_users_editText">Enter user id</string>
    <string name="hint_photos_editText">Enter photo id</string>
    <string name="hint_todos_editText">Enter todo id</string>
    <string name="hint_posts_editText">Enter post id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_contacts"/>
</resources>
